Implementadas y ajustadas varias funcionalidades:
1. Funcionalidad de Crear Notas:
   - Se agregó una función para alternar entre la vista de inicio y la vista de nota.
   - Se actualizó el formulario para crear una nueva nota con título, categoría, color y contenido.
   - Se añadió una verificación para guardar la nota solo si ha sido modificada.

2. Visualización de Notas:
   - Se implementó la funcionalidad para mostrar las notas en la página de inicio.
   - Se aseguraron estilos consistentes para la visualización de notas.

3. Modificaciones de la Vista de Nota:
   - Se ajustaron las funciones para abrir, cerrar y resetear el formulario de nota.
   - Se añadió la funcionalidad para guardar los datos de la nota en el almacenamiento local (localStorage).

4. Diseño y Estilos:
   - Se añadieron estilos CSS para mejorar la visualización y la usabilidad de la app.
   - Se ajustó el diseño para asegurar que la interfaz sea móvil amigable.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                   <div class="note-content">  
                     <h3 class="note-name">My Note</h3>
                     <p class="note-date">Last modified: <span class="modification-date">25-06-2024</span></p>
-                  </div>  
+                  </div>
+                  <button class="delete-button" aria-label="Delete note">
+                    <svg ></svg>
+                  </button>  
                   <button class="note-button" aria-label="Open note">></button>
                 </div>
                 <!-- Second Note-->
@@ -50,10 +53,9 @@
                   </div>  
                   <button class="note-button" aria-label="Open note">></button>
                 </div>
-
-                <!-- Button to add a new note -->
-                <button class="add-note" aria-label="Add new note">+</button>
             </div>
+              <!-- Button to add a new note -->
+              <button class="add-note" aria-label="Add new note">+</button>
     </div>
 
     <!-- Note interfaz -->
@@ -77,7 +79,7 @@
         <fieldset>
           <legend>Category</legend>
           <div class="category-dropdown">
-            <button type="button" class="category-button" onclick="toggleCategoryMenu()">Category</button>
+            <button type="button" class="category-button">Category</button>
             <ul id="category-menu" class="category-menu">
               <li onclick="selectCategory('ToDo')">To Do</li>
               <li onclick="selectCategory('Important')">Important</li>
