Implementadas mejoras en la gestión de notas con IDs únicos y verificación de existencia:
1. Generación de IDs únicos:
   - Añadida función para generar IDs únicos para cada nota.
   - Actualización de la estructura de las notas para incluir IDs únicos.

2. Modificaciones en la gestión de notas:
   - Actualización de la función saveNoteData para usar IDs únicos y mover la nota al principio si es necesario.
   - Cambio de la lógica de eliminación para usar IDs únicos en lugar de índices.
   - Implementación de verificación de existencia de notas antes de abrir o eliminar.

3. Actualización de eventos y funciones:
   - Ajuste de displayNotes para mostrar las notas usando sus IDs.
   - Modificación de openExistingNote para buscar y abrir notas por su ID.
   - Actualización del evento de eliminación para asegurar que se elimine la nota correcta desde la vista de la nota o la página de inicio.

Nota: La funcionalidad de mostrar la última nota abierta en primer lugar aún no está completamente implementada.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                   </div>
                   <button class="delete-button" aria-label="Delete note" data-index="${index}">
                     <img src="icons/delete.svg" alt="Delete">
-                  </button>  
-                  <button class="note-button" aria-label="Open note">></button>
+                  </button>
                 </div>
                 <!-- Second Note-->
                 <div class="note second-note">
@@ -45,8 +44,7 @@
                   </div>
                   <button class="delete-button" aria-label="Delete note" data-index="${index}">
                     <img src="icons/delete.svg" alt="Delete">
-                  </button>  
-                  <button class="note-button" aria-label="Open note">></button>
+                  </button>
                 </div>
                 <!-- Third Note -->
                 <div class="note third-note">
@@ -57,7 +55,6 @@
                   <button class="delete-button" aria-label="Delete note" data-index="${index}">
                     <img src="icons/delete.svg" alt="Delete">
                   </button>
-                  <button class="note-button" aria-label="Open note">></button>
                 </div>
             </div>
               <!-- Button to add a new note -->
@@ -76,8 +73,12 @@
     <!-- Note interfaz -->
     <div class="note-view">
       <!-- Close button -->
-      <button class="back-button" onclick="backToTop()" aria-label="Close note view">&times;</button>
-
+      <div class="note-header">
+        <button class="delete-button" aria-label="Delete note" data-index="${index}">
+          <img src="icons/delete.svg" alt="Delete">
+        </button>
+        <button class="back-button" aria-label="Close note view">&times;</button>
+      </div>
       <!-- Note form -->
       <form id="note-form" onsubmit="return false;">
     
