Implementada funcionalidad de eliminación de categorías:
- Añadido diálogo para confirmar eliminación de categorías.
- Lógica para eliminar todas las notas asociadas a una categoría eliminada.
- Actualización de visualizaciones de notas, categorías y menús desplegables.
- Correcciones de sintaxis y mejora en la gestión de eventos de cancelación.

--- a/index.html
+++ b/index.html
@@ -177,8 +177,18 @@
           <button id="rename-category-cancel" class="rename-button">Cancel</button>
         </div>
       </div>
-
      </div>
+
+     <!-- Box to confirm category deletion -->
+      <div id="delete-category-dialog" class="delete-dialog hidden">
+        <div class="delete-dialog-content">
+          <p>Are you sure you want to delete this category? All associated notes will also be deleted.</p>
+          <div class="delete-button-container">
+            <button id="delete-category-confirm" class="delete-button-category">Delete</button>
+            <button id="delete-category-cancel" class="delete-button-category">Cancel</button>
+          </div>
+        </div>
+      </div>
 
     
 
