Función de añadir nueva categoría finalizada. Se ordenó los nombres de las categorías en la ventana de inicio y en la ventana de nota.

--- a/index.html
+++ b/index.html
@@ -190,6 +190,18 @@
         </div>
       </div>
 
+      <!-- Box to add a new category -->
+      <div id="add-category-dialog" class="add-dialog hidden">
+        <div class="add-dialog-content">
+          <p>Enter the name for the new category:</p>
+          <input type="text" id="new-category-name-input" maxlength="30" placeholder="New category name">
+          <div class="add-category-btn-confirm-container">
+            <button id="add-category-confirm" class="add-button">Add</button>
+            <button id="add-category-cancel" class="add-button">Cancel</button>
+          </div>
+        </div>
+      </div>
+
     
 
   <script src="script.js" defer></script>  
